sample-app-v1/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc-base
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: k-app-base
